Add endpoint profile
