# routes/api.php
@@ -35,6 +35,8 @@ Route::middleware('auth:api')->group(function(){
     Route::group(['middleware' => ['role:Admin|User',]], function () {
         Route::post('/logout', [AuthController::class, 'logout'])->name('logout');
 
+        Route::get('/profile', [AuthController::class, 'profile'])->name('profile');
+
         Route::prefix('tasks')->name('user.tasks.')->group(function () {
             Route::get('/', [TasksController::class, 'index'])->name('index');
             Route::get('/{task}', [TasksController::class, 'show'])->middleware(EnsureTaskBelongsToUser::class)->name('show');
